2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: PlaylistList::Dispose: set current_node to null, since we'll delete
	it here.

2009-07-17 Rolf Bjarne Kvinge <RKvinge@novell.com>

	* mediaelement.cpp: Only emit BufferingProgressChanged if it has gone up. The real
	buffer level will fluctuate as we play.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp|h: When we pause, store the current position, which we must return
	while paused. It may differ from the actual position when we pause, since the actual
	pause is done async.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaplayer.cpp|h:
	* mediaelement.cpp|h: Use a property value provider for
	Render/DroppedFramesPerSecond.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp|h: Make ReportErrorOccurred thread-safe. Managed code might
	call us from a worker thread.

2009-07-16  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: When creating user controls make sure that we are
	hydrating if an x:Class type name is used.

2009-07-16  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxUndoActionInsert::.ctor): Now takes an
	'atomic' argument. If atomic is true, then the buffer is not
	growable. This is the behavior we want for TextBoxBase::Paste(),
	but not TextBoxBase::Commit() (which needs to allow growable
	insert actions so that Undo removes the string of text the user
	just typed as opposed to just the most recent character).
	(TextBoxBase::Paste): Pass 'true' as the 'atomic' argument to
	TextBoxUndoActionInsert::.ctor().

2009-07-16  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* uielement.h:
	* control.cpp:
	* uielement.cpp: 1) If the Control is not attached to a
	  subtree which has been loaded, don't propagate IsEnabled to
	  its children.
	2) Whenever a Control is loaded we traverse it's visual
	  parents until we find another control and propagate the
	  IsEnabled state.
