@@ -126,15 +126,16 @@ const int PlaylistRoot::BufferingProgressChangedEvent = 1;
 const int PlaylistRoot::BufferUnderflowEvent = 2;
 const int PlaylistRoot::CurrentStateChangedEvent = 3;
 const int PlaylistRoot::DownloadProgressChangedEvent = 4;
-const int PlaylistRoot::MediaEndedEvent = 5;
-const int PlaylistRoot::MediaErrorEvent = 6;
-const int PlaylistRoot::OpenCompletedEvent = 7;
-const int PlaylistRoot::OpeningEvent = 8;
-const int PlaylistRoot::PauseEvent = 9;
-const int PlaylistRoot::PlayEvent = 10;
-const int PlaylistRoot::SeekCompletedEvent = 11;
-const int PlaylistRoot::SeekingEvent = 12;
-const int PlaylistRoot::StopEvent = 13;
+const int PlaylistRoot::EntryChangedEvent = 5;
+const int PlaylistRoot::MediaEndedEvent = 6;
+const int PlaylistRoot::MediaErrorEvent = 7;
+const int PlaylistRoot::OpenCompletedEvent = 8;
+const int PlaylistRoot::OpeningEvent = 9;
+const int PlaylistRoot::PauseEvent = 10;
+const int PlaylistRoot::PlayEvent = 11;
+const int PlaylistRoot::SeekCompletedEvent = 12;
+const int PlaylistRoot::SeekingEvent = 13;
+const int PlaylistRoot::StopEvent = 14;
 const int Popup::ClosedEvent = 19;
 const int Popup::OpenedEvent = 20;
 const int Surface::ErrorEvent = 1;
@@ -194,7 +195,7 @@ const char *MEDIAELEMENT_Events [] = { "BufferingProgressChanged", "CurrentState
 const char *MEDIAPLAYER_Events [] = { "BufferUnderflow", "MediaEnded", NULL };
 const char *MULTISCALEIMAGE_Events [] = { "ImageFailed", "ImageOpenFailed", "ImageOpenSucceeded", "MotionFinished", "ViewportChanged", NULL };
 const char *PASSWORDBOX_Events [] = { "PasswordChanged", NULL };
-const char *PLAYLISTROOT_Events [] = { "BufferingProgressChanged", "BufferUnderflow", "CurrentStateChanged", "DownloadProgressChanged", "MediaEnded", "MediaError", "OpenCompleted", "Opening", "Pause", "Play", "SeekCompleted", "Seeking", "Stop", NULL };
+const char *PLAYLISTROOT_Events [] = { "BufferingProgressChanged", "BufferUnderflow", "CurrentStateChanged", "DownloadProgressChanged", "EntryChanged", "MediaEnded", "MediaError", "OpenCompleted", "Opening", "Pause", "Play", "SeekCompleted", "Seeking", "Stop", NULL };
 const char *POPUP_Events [] = { "Closed", "Opened", NULL };
 const Type::Kind STRING_Interfaces[] = { Type::ICOMPARABLE, Type::ICOMPARABLE_STRING, Type::ICONVERTIBLE, Type::IEQUATABLE_STRING, Type::IFORMATTABLE };
 const char *SURFACE_Events [] = { "Error", "FullScreenChange", "Load", "Resize", "SourceDownloadComplete", "SourceDownloadProgressChanged", NULL };
@@ -430,7 +431,7 @@ Types::RegisterNativeTypes ()
 	types [(int) Type::PATHSEGMENT_COLLECTION] = new Type (Type::PATHSEGMENT_COLLECTION, Type::DEPENDENCY_OBJECT_COLLECTION, false, false, "PathSegmentCollection", 0, 3, NULL, 0, NULL, true, (create_inst_func *) path_segment_collection_new, NULL);
 	types [(int) Type::PLAYLIST] = new Type (Type::PLAYLIST, Type::PLAYLISTENTRY, false, false, "Playlist", 0, 1, NULL, 0, NULL, false, NULL, NULL);
 	types [(int) Type::PLAYLISTENTRY] = new Type (Type::PLAYLISTENTRY, Type::EVENTOBJECT, false, false, "PlaylistEntry", 0, 1, NULL, 0, NULL, false, NULL, NULL);
-	types [(int) Type::PLAYLISTROOT] = new Type (Type::PLAYLISTROOT, Type::PLAYLIST, false, false, "PlaylistRoot", 13, 14, PLAYLISTROOT_Events, 0, NULL, false, NULL, NULL);
+	types [(int) Type::PLAYLISTROOT] = new Type (Type::PLAYLISTROOT, Type::PLAYLIST, false, false, "PlaylistRoot", 14, 15, PLAYLISTROOT_Events, 0, NULL, false, NULL, NULL);
 	types [(int) Type::POINT] = new Type (Type::POINT, Type::OBJECT, true, false, "Point", 0, 0, NULL, 0, NULL, true, NULL, NULL);
 	types [(int) Type::POINT_COLLECTION] = new Type (Type::POINT_COLLECTION, Type::COLLECTION, false, false, "PointCollection", 0, 3, NULL, 0, NULL, true, (create_inst_func *) point_collection_new, NULL);
 	types [(int) Type::POINTANIMATION] = new Type (Type::POINTANIMATION, Type::ANIMATION, false, false, "PointAnimation", 0, 2, NULL, 0, NULL, true, (create_inst_func *) point_animation_new, NULL);
