@@ -1,5 +1,11 @@
 2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* playlist.cpp|h: Added and Emit EntryChangedEvent.
+
+	* type-generated.cpp: Regenerated.
+
+2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* playlist.cpp: PlaylistList::Dispose: set current_node to null, since we'll delete
 	it here.
 
